rlctbg/raylib.py


class AudioStream(Structure):
    """NOTE: Useful to create custom audio streams not bound to a specific file"""
    _fields_ = [
       ('sampleRate', c_uint),
       ('sampleSize', c_uint),
       ('channels', c_uint),
       ('buffer', POINTER(rAudioBuffer)),
    ]


class Sound(Structure):
    """Sound source type"""
    _fields_ = [
       ('sampleCount', c_uint),
       ('stream', AudioStream),
    ]


class Music(Structure):
    """NOTE: Anything longer than ~10 seconds should be streamed"""
    _fields_ = [
       ('ctxType', c_int),
       ('ctxData', c_void_p),
       ('sampleCount', c_uint),
       ('loopCount', c_uint),
       ('stream', AudioStream),
    ]


class VrDeviceInfo(Structure):
    """Head-Mounted-Display device parameters"""
    _fields_ = [
       ('hResolution', c_int),
       ('vResolution', c_int),
       ('hScreenSize', c_float),
       ('vScreenSize', c_float),
       ('vScreenCenter', c_float),
       ('eyeToScreenDistance', c_float),
       ('lensSeparationDistance', c_float),
       ('interpupillaryDistance', c_float),
       ('lensDistortionValues', c_float * 4),
       ('chromaAbCorrection', c_float * 4),
    ]


class ConfigFlag(IntEnum):
    RESERVED = 1
    FULLSCREEN_MODE = 2
    WINDOW_RESIZABLE = 4
    WINDOW_UNDECORATED = 8
    WINDOW_TRANSPARENT = 16
    WINDOW_HIDDEN = 128
    WINDOW_ALWAYS_RUN = 256
    MSAA_4X_HINT = 32
    VSYNC_HINT = 64


FLAG_RESERVED = ConfigFlag.RESERVED
FLAG_FULLSCREEN_MODE = ConfigFlag.FULLSCREEN_MODE
FLAG_WINDOW_RESIZABLE = ConfigFlag.WINDOW_RESIZABLE
FLAG_WINDOW_UNDECORATED = ConfigFlag.WINDOW_UNDECORATED
FLAG_WINDOW_TRANSPARENT = ConfigFlag.WINDOW_TRANSPARENT
FLAG_WINDOW_HIDDEN = ConfigFlag.WINDOW_HIDDEN
FLAG_WINDOW_ALWAYS_RUN = ConfigFlag.WINDOW_ALWAYS_RUN
FLAG_MSAA_4X_HINT = ConfigFlag.MSAA_4X_HINT
FLAG_VSYNC_HINT = ConfigFlag.VSYNC_HINT


class TraceLogType(IntEnum):
    """Trace log type"""
    ALL = 0
    TRACE = auto()
    DEBUG = auto()
    INFO = auto()
    WARNING = auto()
    ERROR = auto()
    FATAL = auto()
    NONE = auto()


LOG_ALL = TraceLogType.ALL
LOG_TRACE = TraceLogType.TRACE
LOG_DEBUG = TraceLogType.DEBUG
LOG_INFO = TraceLogType.INFO
LOG_WARNING = TraceLogType.WARNING
LOG_ERROR = TraceLogType.ERROR
LOG_FATAL = TraceLogType.FATAL
LOG_NONE = TraceLogType.NONE


class KeyboardKey(IntEnum):
    """Keyboard keys"""
    APOSTROPHE = 39
    COMMA = 44
    MINUS = 45
    PERIOD = 46
    SLASH = 47
    ZERO = 48
    ONE = 49
    TWO = 50
    THREE = 51
    FOUR = 52
    FIVE = 53
    SIX = 54
    SEVEN = 55
    EIGHT = 56
    NINE = 57
    SEMICOLON = 59
    EQUAL = 61
    A = 65
    B = 66
    C = 67
    D = 68
    E = 69
    F = 70
    G = 71
    H = 72
    I = 73
    J = 74
    K = 75
    L = 76
    M = 77
    N = 78
    O = 79
    P = 80
    Q = 81
    R = 82
    S = 83
    T = 84
    U = 85
    V = 86
    W = 87
    X = 88
    Y = 89
    Z = 90
    SPACE = 32
    ESCAPE = 256
    ENTER = 257
    TAB = 258
    BACKSPACE = 259
    INSERT = 260
    DELETE = 261
    RIGHT = 262
    LEFT = 263
    DOWN = 264
    UP = 265
    PAGE_UP = 266
    PAGE_DOWN = 267
    HOME = 268
    END = 269
    CAPS_LOCK = 280
    SCROLL_LOCK = 281
    NUM_LOCK = 282
    PRINT_SCREEN = 283
    PAUSE = 284
    F1 = 290
    F2 = 291
    F3 = 292
    F4 = 293
    F5 = 294
    F6 = 295
    F7 = 296
    F8 = 297
    F9 = 298
    F10 = 299
    F11 = 300
    F12 = 301
    LEFT_SHIFT = 340
    LEFT_CONTROL = 341
    LEFT_ALT = 342
    LEFT_SUPER = 343
    RIGHT_SHIFT = 344
    RIGHT_CONTROL = 345
    RIGHT_ALT = 346
    RIGHT_SUPER = 347
    KB_MENU = 348
    LEFT_BRACKET = 91
    BACKSLASH = 92
    RIGHT_BRACKET = 93
    GRAVE = 96
    KP_0 = 320
    KP_1 = 321
    KP_2 = 322
    KP_3 = 323
    KP_4 = 324
    KP_5 = 325
    KP_6 = 326
    KP_7 = 327
    KP_8 = 328
    KP_9 = 329
    KP_DECIMAL = 330
    KP_DIVIDE = 331
    KP_MULTIPLY = 332
    KP_SUBTRACT = 333
    KP_ADD = 334
    KP_ENTER = 335
    KP_EQUAL = 336


KEY_APOSTROPHE = KeyboardKey.APOSTROPHE
KEY_COMMA = KeyboardKey.COMMA
KEY_MINUS = KeyboardKey.MINUS
KEY_PERIOD = KeyboardKey.PERIOD
KEY_SLASH = KeyboardKey.SLASH
KEY_ZERO = KeyboardKey.ZERO
KEY_ONE = KeyboardKey.ONE
KEY_TWO = KeyboardKey.TWO
KEY_THREE = KeyboardKey.THREE
KEY_FOUR = KeyboardKey.FOUR
KEY_FIVE = KeyboardKey.FIVE
KEY_SIX = KeyboardKey.SIX
KEY_SEVEN = KeyboardKey.SEVEN
KEY_EIGHT = KeyboardKey.EIGHT
KEY_NINE = KeyboardKey.NINE
KEY_SEMICOLON = KeyboardKey.SEMICOLON
KEY_EQUAL = KeyboardKey.EQUAL
KEY_A = KeyboardKey.A
KEY_B = KeyboardKey.B
KEY_C = KeyboardKey.C
KEY_D = KeyboardKey.D
KEY_E = KeyboardKey.E
KEY_F = KeyboardKey.F
KEY_G = KeyboardKey.G
KEY_H = KeyboardKey.H
KEY_I = KeyboardKey.I
KEY_J = KeyboardKey.J
KEY_K = KeyboardKey.K
KEY_L = KeyboardKey.L
KEY_M = KeyboardKey.M
KEY_N = KeyboardKey.N
KEY_O = KeyboardKey.O
KEY_P = KeyboardKey.P
KEY_Q = KeyboardKey.Q
KEY_R = KeyboardKey.R
KEY_S = KeyboardKey.S
KEY_T = KeyboardKey.T
KEY_U = KeyboardKey.U
KEY_V = KeyboardKey.V
KEY_W = KeyboardKey.W
KEY_X = KeyboardKey.X
KEY_Y = KeyboardKey.Y
KEY_Z = KeyboardKey.Z
KEY_SPACE = KeyboardKey.SPACE
KEY_ESCAPE = KeyboardKey.ESCAPE
KEY_ENTER = KeyboardKey.ENTER
KEY_TAB = KeyboardKey.TAB
KEY_BACKSPACE = KeyboardKey.BACKSPACE
KEY_INSERT = KeyboardKey.INSERT
KEY_DELETE = KeyboardKey.DELETE
KEY_RIGHT = KeyboardKey.RIGHT
KEY_LEFT = KeyboardKey.LEFT
KEY_DOWN = KeyboardKey.DOWN
KEY_UP = KeyboardKey.UP
KEY_PAGE_UP = KeyboardKey.PAGE_UP
KEY_PAGE_DOWN = KeyboardKey.PAGE_DOWN
KEY_HOME = KeyboardKey.HOME
KEY_END = KeyboardKey.END
KEY_CAPS_LOCK = KeyboardKey.CAPS_LOCK
KEY_SCROLL_LOCK = KeyboardKey.SCROLL_LOCK
KEY_NUM_LOCK = KeyboardKey.NUM_LOCK
KEY_PRINT_SCREEN = KeyboardKey.PRINT_SCREEN
KEY_PAUSE = KeyboardKey.PAUSE
KEY_F1 = KeyboardKey.F1
KEY_F2 = KeyboardKey.F2
KEY_F3 = KeyboardKey.F3
KEY_F4 = KeyboardKey.F4
KEY_F5 = KeyboardKey.F5
KEY_F6 = KeyboardKey.F6
KEY_F7 = KeyboardKey.F7
KEY_F8 = KeyboardKey.F8
KEY_F9 = KeyboardKey.F9
KEY_F10 = KeyboardKey.F10
KEY_F11 = KeyboardKey.F11
KEY_F12 = KeyboardKey.F12
KEY_LEFT_SHIFT = KeyboardKey.LEFT_SHIFT
KEY_LEFT_CONTROL = KeyboardKey.LEFT_CONTROL
KEY_LEFT_ALT = KeyboardKey.LEFT_ALT
KEY_LEFT_SUPER = KeyboardKey.LEFT_SUPER
KEY_RIGHT_SHIFT = KeyboardKey.RIGHT_SHIFT
KEY_RIGHT_CONTROL = KeyboardKey.RIGHT_CONTROL
KEY_RIGHT_ALT = KeyboardKey.RIGHT_ALT
KEY_RIGHT_SUPER = KeyboardKey.RIGHT_SUPER
KEY_KB_MENU = KeyboardKey.KB_MENU
KEY_LEFT_BRACKET = KeyboardKey.LEFT_BRACKET
KEY_BACKSLASH = KeyboardKey.BACKSLASH
KEY_RIGHT_BRACKET = KeyboardKey.RIGHT_BRACKET
KEY_GRAVE = KeyboardKey.GRAVE
KEY_KP_0 = KeyboardKey.KP_0
KEY_KP_1 = KeyboardKey.KP_1
KEY_KP_2 = KeyboardKey.KP_2
KEY_KP_3 = KeyboardKey.KP_3
KEY_KP_4 = KeyboardKey.KP_4
KEY_KP_5 = KeyboardKey.KP_5
KEY_KP_6 = KeyboardKey.KP_6
KEY_KP_7 = KeyboardKey.KP_7
KEY_KP_8 = KeyboardKey.KP_8
KEY_KP_9 = KeyboardKey.KP_9
KEY_KP_DECIMAL = KeyboardKey.KP_DECIMAL
KEY_KP_DIVIDE = KeyboardKey.KP_DIVIDE
KEY_KP_MULTIPLY = KeyboardKey.KP_MULTIPLY
KEY_KP_SUBTRACT = KeyboardKey.KP_SUBTRACT
KEY_KP_ADD = KeyboardKey.KP_ADD
KEY_KP_ENTER = KeyboardKey.KP_ENTER
KEY_KP_EQUAL = KeyboardKey.KP_EQUAL


class AndroidButton(IntEnum):
    """Android buttons"""
    BACK = 4
    MENU = 82
    VOLUME_UP = 24
    VOLUME_DOWN = 25


KEY_BACK = AndroidButton.BACK
KEY_MENU = AndroidButton.MENU
KEY_VOLUME_UP = AndroidButton.VOLUME_UP
KEY_VOLUME_DOWN = AndroidButton.VOLUME_DOWN


class MouseButton(IntEnum):
    """Mouse buttons"""
    LEFT_BUTTON = 0
    RIGHT_BUTTON = 1
    MIDDLE_BUTTON = 2


MOUSE_LEFT_BUTTON = MouseButton.LEFT_BUTTON
MOUSE_RIGHT_BUTTON = MouseButton.RIGHT_BUTTON
MOUSE_MIDDLE_BUTTON = MouseButton.MIDDLE_BUTTON


class GamepadNumber(IntEnum):
    """Gamepad number"""
    PLAYER1 = 0
    PLAYER2 = 1
    PLAYER3 = 2
    PLAYER4 = 3


GAMEPAD_PLAYER1 = GamepadNumber.PLAYER1
GAMEPAD_PLAYER2 = GamepadNumber.PLAYER2
GAMEPAD_PLAYER3 = GamepadNumber.PLAYER3
GAMEPAD_PLAYER4 = GamepadNumber.PLAYER4


class GamepadButton(IntEnum):
    """Gamepad Buttons"""
    BUTTON_UNKNOWN = 0
    BUTTON_LEFT_FACE_UP = auto()
    BUTTON_LEFT_FACE_RIGHT = auto()
    BUTTON_LEFT_FACE_DOWN = auto()
    BUTTON_LEFT_FACE_LEFT = auto()
    BUTTON_RIGHT_FACE_UP = auto()
    BUTTON_RIGHT_FACE_RIGHT = auto()
    BUTTON_RIGHT_FACE_DOWN = auto()
    BUTTON_RIGHT_FACE_LEFT = auto()
    BUTTON_LEFT_TRIGGER_1 = auto()
    BUTTON_LEFT_TRIGGER_2 = auto()
    BUTTON_RIGHT_TRIGGER_1 = auto()
    BUTTON_RIGHT_TRIGGER_2 = auto()
    BUTTON_MIDDLE_LEFT = auto()
    BUTTON_MIDDLE = auto()
    BUTTON_MIDDLE_RIGHT = auto()
    BUTTON_LEFT_THUMB = auto()
    BUTTON_RIGHT_THUMB = auto()


GAMEPAD_BUTTON_UNKNOWN = GamepadButton.BUTTON_UNKNOWN
GAMEPAD_BUTTON_LEFT_FACE_UP = GamepadButton.BUTTON_LEFT_FACE_UP
GAMEPAD_BUTTON_LEFT_FACE_RIGHT = GamepadButton.BUTTON_LEFT_FACE_RIGHT
GAMEPAD_BUTTON_LEFT_FACE_DOWN = GamepadButton.BUTTON_LEFT_FACE_DOWN
GAMEPAD_BUTTON_LEFT_FACE_LEFT = GamepadButton.BUTTON_LEFT_FACE_LEFT
GAMEPAD_BUTTON_RIGHT_FACE_UP = GamepadButton.BUTTON_RIGHT_FACE_UP
GAMEPAD_BUTTON_RIGHT_FACE_RIGHT = GamepadButton.BUTTON_RIGHT_FACE_RIGHT
GAMEPAD_BUTTON_RIGHT_FACE_DOWN = GamepadButton.BUTTON_RIGHT_FACE_DOWN
GAMEPAD_BUTTON_RIGHT_FACE_LEFT = GamepadButton.BUTTON_RIGHT_FACE_LEFT
GAMEPAD_BUTTON_LEFT_TRIGGER_1 = GamepadButton.BUTTON_LEFT_TRIGGER_1
GAMEPAD_BUTTON_LEFT_TRIGGER_2 = GamepadButton.BUTTON_LEFT_TRIGGER_2
GAMEPAD_BUTTON_RIGHT_TRIGGER_1 = GamepadButton.BUTTON_RIGHT_TRIGGER_1
GAMEPAD_BUTTON_RIGHT_TRIGGER_2 = GamepadButton.BUTTON_RIGHT_TRIGGER_2
GAMEPAD_BUTTON_MIDDLE_LEFT = GamepadButton.BUTTON_MIDDLE_LEFT
GAMEPAD_BUTTON_MIDDLE = GamepadButton.BUTTON_MIDDLE
GAMEPAD_BUTTON_MIDDLE_RIGHT = GamepadButton.BUTTON_MIDDLE_RIGHT
GAMEPAD_BUTTON_LEFT_THUMB = GamepadButton.BUTTON_LEFT_THUMB
GAMEPAD_BUTTON_RIGHT_THUMB = GamepadButton.BUTTON_RIGHT_THUMB


class GamepadAxis(IntEnum):
    """Gamepad Buttons"""
    AXIS_UNKNOWN = 0
    AXIS_LEFT_X = auto()
    AXIS_LEFT_Y = auto()
    AXIS_RIGHT_X = auto()
    AXIS_RIGHT_Y = auto()
    AXIS_LEFT_TRIGGER = auto()
    AXIS_RIGHT_TRIGGER = auto()


GAMEPAD_AXIS_UNKNOWN = GamepadAxis.AXIS_UNKNOWN
GAMEPAD_AXIS_LEFT_X = GamepadAxis.AXIS_LEFT_X
GAMEPAD_AXIS_LEFT_Y = GamepadAxis.AXIS_LEFT_Y
GAMEPAD_AXIS_RIGHT_X = GamepadAxis.AXIS_RIGHT_X
GAMEPAD_AXIS_RIGHT_Y = GamepadAxis.AXIS_RIGHT_Y
GAMEPAD_AXIS_LEFT_TRIGGER = GamepadAxis.AXIS_LEFT_TRIGGER
GAMEPAD_AXIS_RIGHT_TRIGGER = GamepadAxis.AXIS_RIGHT_TRIGGER


class ShaderLocationIndex(IntEnum):
    """Shader location point type"""
    VERTEX_POSITION = 0
    VERTEX_TEXCOORD01 = auto()
    VERTEX_TEXCOORD02 = auto()
    VERTEX_NORMAL = auto()
    VERTEX_TANGENT = auto()
    VERTEX_COLOR = auto()
    MATRIX_MVP = auto()
    MATRIX_MODEL = auto()
    MATRIX_VIEW = auto()
    MATRIX_PROJECTION = auto()
    VECTOR_VIEW = auto()
    COLOR_DIFFUSE = auto()
    COLOR_SPECULAR = auto()
    COLOR_AMBIENT = auto()
    MAP_ALBEDO = auto()
    MAP_METALNESS = auto()
    MAP_NORMAL = auto()
    MAP_ROUGHNESS = auto()
    MAP_OCCLUSION = auto()
    MAP_EMISSION = auto()
    MAP_HEIGHT = auto()
    MAP_CUBEMAP = auto()
    MAP_IRRADIANCE = auto()
    MAP_PREFILTER = auto()
    MAP_BRDF = auto()

